test/index.js
'use strict'
const test = require('brittle')
const path = require('bare-path') // error

test('basic', function (t) {
  t.pass()
})